[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aeri"
version = "0.1.0"
description = "Artificial Emotional & Reasoning Intelligence"
authors = [{name = "AERI Team"}]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8", "mypy"]
notebooks = ["jupyter", "matplotlib", "seaborn"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
